# ProntoTerminator

./: README.md
lib/pythonPluginInterfaceExample/: CMakeLists.txt  main.cpp  plugin.py
prontoTerminator/: prontoTerminator.pro
prontoTerminator/app/: app.pro  mainwindow.cpp  mainwindow.h
prontoTerminator/lib/QScintilla/Python/: configure-old.py  configure.py
prontoTerminator/lib/QScintilla/Qt4Qt5/: Qt4Qt5.pro  qsciscintilla.cpp
